[gd_scene load_steps=19 format=2]

[ext_resource path="res://Game/Assets/Audio/ogg/enemies/scavengers_enemy1.ogg" type="AudioStream" id=1]
[ext_resource path="res://Game/Assets/Audio/ogg/enemies/scavengers_footstep2.ogg" type="AudioStream" id=2]
[ext_resource path="res://Game/Assets/Audio/ogg/enemies/sproutch.ogg" type="AudioStream" id=3]
[ext_resource path="res://Game/Assets/Images/Scavengers_SpriteSheet.png" type="Texture" id=4]
[ext_resource path="res://Game/Assets/Audio/ogg/enemies/wueh.ogg" type="AudioStream" id=5]
[ext_resource path="res://Game/Assets/Audio/ogg/enemies/scavengers_footstep1.ogg" type="AudioStream" id=6]
[ext_resource path="res://Game/Actors/Mummy/Mummy.gd" type="Script" id=7]
[ext_resource path="res://Game/BaseScripts/AnimManager.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 42, 43, 6, 8 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../Voice")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0494363,
"start_offset": 0.0,
"stream": ExtResource( 1 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 1 )
} ],
"times": PoolRealArray( 0, 0.2 )
}

[sub_resource type="Animation" id=2]
length = 0.25
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1.1, 0.9 ), Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hit"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 11, 7, 9 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../Voice")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
length = 2.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.75, 0.85, 1.6, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 3,
"values": [ 8, 10, 8, 9, 8, 9, 10 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../Voice")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 1 )
} ],
"times": PoolRealArray( 0.3 )
}
tracks/2/type = "audio"
tracks/2/path = NodePath("../Voice")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 1 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Voice:pitch_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.9, 1.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0.76, 1.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("..:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=6]
resource_name = "killed"
length = 0.02
step = 0.01
tracks/0/type = "method"
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "explode"
}, {
"args": [  ],
"method": "dead"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
length = 0.6
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.11, 0.22, 0.33, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 3,
"values": [ 8, 7, 8, 10, 9 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../Steps")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"clips": [ {
"end_offset": 0.601856,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.03 )
}
tracks/2/type = "audio"
tracks/2/path = NodePath("../Steps")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"clips": [ {
"end_offset": 0.759843,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0.3 )
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 14, 14 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.294118, 0.541176, 0.215686, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.12549, 0.231373, 0.0901961, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 4
shadow_color = Color( 0.290196, 0.541176, 0.215686, 0.415686 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.294118, 0.541176, 0.215686, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 4
shadow_color = Color( 0.2916, 0.54, 0.216, 0.596078 )

[node name="Mummy" type="KinematicBody2D"]
light_mask = 0
collision_layer = 8
collision_mask = 11
collision/safe_margin = 2.0
script = ExtResource( 7 )
walk_speed = 8
onLeftFlip = 0
onRightFlip = 1
onUpFlip = 4
onDownFlip = 4
onIdleFlip = 4
animator = NodePath("Animation/AnimationPlayer")
visual = NodePath("Animation/Sprite")
sproutch = ExtResource( 3 )

[node name="Animation" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animation"]
playback_process_mode = 0
method_call_mode = 1
anims/attack = SubResource( 1 )
anims/bump = SubResource( 2 )
anims/hit = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/init = SubResource( 5 )
anims/killed = SubResource( 6 )
anims/walk = SubResource( 7 )
script = ExtResource( 8 )
loop_anims = PoolStringArray( "idle", "walk" )
unstoppable_anims = PoolStringArray( "hit", "attack", "killed", "init" )
anims_autochaining = PoolStringArray( "init>idle", "attack>idle", "hit>idle" )
start_anim = "init"

[node name="Sprite" type="Sprite" parent="Animation"]
texture = ExtResource( 4 )
flip_h = true
vframes = 10
hframes = 8
frame = 6

[node name="MummyBody" type="CollisionShape2D" parent="."]
light_mask = 0
shape = SubResource( 8 )

[node name="SoundRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 32, 0 )
collision_mask = 2

[node name="FrontEffects" type="Node2D" parent="."]
light_mask = 3

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]

[node name="Steps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
max_distance = 128.0
attenuation = 0.25

[node name="Voice" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
max_distance = 128.0
attenuation = 1.93187

[node name="UI" type="Control" parent="."]
margin_left = -10.0
margin_top = 3.238
margin_right = 10.0
margin_bottom = 9.238
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="LifeBar" type="ProgressBar" parent="UI"]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 20, 6 )
rect_pivot_offset = Vector2( 160, 7 )
hint_tooltip = "50"
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
value = 50.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HideTimer" type="Timer" parent="UI/LifeBar"]
wait_time = 0.5
one_shot = true

[node name="CoolDownTimer" type="Timer" parent="."]
one_shot = true

[node name="CalmDownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="UI/LifeBar/HideTimer" to="." method="hide_life_bar"]
[connection signal="timeout" from="CoolDownTimer" to="." method="set_can_attack" binds= [ true ]]
[connection signal="timeout" from="CalmDownTimer" to="." method="set_attack" binds= [ false ]]
